--- a/app/src/main/res/layout/sample_item.xml
+++ b/app/src/main/res/layout/sample_item.xml
@@ -9,20 +9,17 @@
         android:id="@+id/down"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
-        android:drawableRight="@drawable/ic_down"
         android:fontFamily="@font/baloo"
         android:gravity="center_vertical"
         android:padding="5dp"
         android:text="Down"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="12sp"
         android:textStyle="italic"
+        app:drawableRightCompat="@drawable/ic_down"
         app:layout_constraintBottom_toTopOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/tags"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -31,8 +28,9 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/baloo"
         android:padding="5dp"
-        android:text="tags"
-        android:textColor="@color/black"
+        android:text="@string/tags"
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toTopOf="@+id/imageView"
         app:layout_constraintStart_toStartOf="@+id/imageView"
         app:layout_constraintTop_toTopOf="@+id/down" />
 
@@ -42,7 +40,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="52dp"
+        android:layout_marginTop="42dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:padding="5dp"
@@ -55,9 +53,9 @@
     <View
         android:id="@+id/view"
         android:layout_width="wrap_content"
-        android:layout_height="1dp"
-        android:layout_marginTop="2dp"
-        android:background="#070707"
+        android:layout_height="2dp"
+        android:layout_marginTop="8dp"
+        android:background="#FFFFFF"
         android:padding="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
