--- a/app/src/main/res/drawable/bg_query.xml
+++ b/app/src/main/res/drawable/bg_query.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <solid
-        android:color="#493657"/>
+        android:color="#654B78"/>
 
     <corners
         android:radius="20dp"/>
