--- a/app/src/main/res/drawable/bg_btn.xml
+++ b/app/src/main/res/drawable/bg_btn.xml
@@ -1,7 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
+<ripple xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:color="#654B78"
+    tools:targetApi="lollipop">
 
-    <solid android:color="#4774EF"/>
-    <corners android:radius="20dp"/>
+    <item>
 
-</shape>
+        <shape android:shape="rectangle">
+
+            <solid android:color="#654B78"/>
+            <corners android:radius="20dp"/>
+
+        </shape>
+
+    </item>
+</ripple>
