--- a/app/src/main/res/drawable/bg_btn.xml
+++ b/app/src/main/res/drawable/bg_btn.xml
@@ -8,7 +8,12 @@
 
         <shape android:shape="rectangle">
 
-            <solid android:color="#654B78"/>
+            <gradient android:startColor="#934EC6"
+                android:endColor="#A64076"
+                >
+
+
+            </gradient>
             <corners android:radius="20dp"/>
 
         </shape>
