--- a/app/src/main/res/drawable/bg_query.xml
+++ b/app/src/main/res/drawable/bg_query.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <solid
-        android:color="#654B78"/>
-
+    <gradient android:startColor="#976AB8"
+        android:endColor="#7A0CCC"
+        >
+    </gradient>
     <corners
         android:radius="20dp"/>
 
