--- a/app/src/main/res/layout/sample_item.xml
+++ b/app/src/main/res/layout/sample_item.xml
@@ -18,7 +18,7 @@
 
         <TextView
             android:id="@+id/tags"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
             android:layout_marginLeft="5dp"
@@ -43,6 +43,7 @@
             android:layout_width="140dp"
             android:layout_height="140dp"
             android:layout_margin="6dp"
+            android:scaleType="fitXY"
             tools:srcCompat="@tools:sample/avatars" />
 
     </LinearLayout>
