--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,8 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Wall" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.Wall" parent="Theme.AppCompat.DayNight">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">#CE7DA5</item>
+        <item name="colorPrimary">#3263AE</item>
         <item name="colorPrimaryVariant">#493657</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
