--- a/app/src/main/res/drawable/bg_query.xml
+++ b/app/src/main/res/drawable/bg_query.xml
@@ -1,11 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
+<ripple xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:color="#654B78"
+    tools:targetApi="lollipop">
 
-    <gradient android:startColor="#976AB8"
-        android:endColor="#7A0CCC"
-        >
-    </gradient>
-    <corners
-        android:radius="20dp"/>
+    <item>
 
-</shape>
+        <shape android:shape="rectangle">
+
+            <gradient android:startColor="#654B78"
+                android:endColor="#4125BD"
+                >
+
+
+            </gradient>
+            <corners android:radius="20dp"/>
+
+        </shape>
+
+    </item>
+</ripple>
