--- a/app/src/main/res/drawable/bg_cardview.xml
+++ b/app/src/main/res/drawable/bg_cardview.xml
@@ -5,8 +5,8 @@
     tools:targetApi="lollipop">
 
     <gradient
-        android:endColor="#4125BD"
-        android:startColor="#654B78">
+        android:endColor="#A6A2BA"
+        android:startColor="#8733C5">
     </gradient>
 
 </shape>
