--- a/app/src/main/res/layout/sample_item.xml
+++ b/app/src/main/res/layout/sample_item.xml
@@ -3,48 +3,50 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
-
-    <LinearLayout
-        android:id="@+id/layoutHori"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="2dp"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <TextView
-            android:id="@+id/tags"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:layout_marginLeft="5dp"
-            android:fontFamily="@font/baloo"
-            android:text="@string/tags"
-            android:textColor="#2B2828"
-            android:textSize="10sp" />
-
-
-    </LinearLayout>
+    android:layout_height="wrap_content"
+    >
 
     <LinearLayout
         android:id="@+id/layoutVerti"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/layoutHori"
-        android:background="@drawable/img_stroke"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="5dp"
+        android:layout_marginTop="2dp"
+        >
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="155dp"
+            android:layout_height="140dp"
+            android:elevation="2dp"
+            android:padding="10dp"
+            tools:targetApi="lollipop"
+            app:cardCornerRadius="8dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp">
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="140dp"
+            android:layout_width="match_parent"
             android:layout_height="140dp"
-            android:layout_margin="6dp"
             android:scaleType="fitXY"
-            tools:srcCompat="@tools:sample/avatars" />
+            tools:srcCompat="@tools:sample/avatars"
+            />
+
+        </androidx.cardview.widget.CardView>
+        <TextView
+            android:id="@+id/tags"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/baloo"
+            android:layout_marginLeft="10dp"
+            android:text="TEXt_TAGS"
+            android:inputType="textPersonName"
+            android:textColor="#6300AC"
+            android:textSize="10sp"
+            android:layout_gravity="bottom"
+            android:layout_marginTop="5dp"
+            android:layout_marginStart="10dp" />
 
     </LinearLayout>
 
@@ -52,15 +54,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/layoutVerti"
-        android:layout_marginTop="8dp"
         android:orientation="horizontal">
 
         <View
             android:id="@+id/view"
             android:layout_width="wrap_content"
             android:layout_height="2dp"
-            android:background="@color/black"
-            android:padding="5dp" />
+            android:background="#CEB4E1"
+            android:layout_marginTop="5dp"
+             />
+
     </LinearLayout>
 
 
