--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,16 +5,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Activity.MainActivity"
-    android:background="@drawable/mainback"
+    android:background="@drawable/wallappback"
     >
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="200dp"
+        android:orientation="vertical"
         >
 
-        <EditText
+        <!-- <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/etQuery"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
@@ -28,29 +29,54 @@
             android:layout_weight="2"
             android:layout_marginTop="4dp"
             android:layout_marginLeft="20dp"
-            android:gravity="center_horizontal" />
+            android:gravity="center_horizontal" /> -->
 
-        <Button
-            android:textColor="@color/white"
-            android:id="@+id/searchBtn"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/searchWall"
             android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:text="@string/search"
-            android:layout_marginRight="5dp"
-            android:background="@drawable/bg_btn"
-            />
+            android:layout_height="wrap_content"
+            style="@style/Widget.Wall.TextInputLayout"
+            >
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/etQuery"
+                android:layout_width="300dp"
+                android:layout_marginLeft="10dp"
+                android:layout_height="wrap_content"
+                android:hint="Search wallpapers"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:inputType="text"
+                />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+
+        <FrameLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent" >
+
+            <ProgressBar
+                android:id="@+id/progressBar1"
+                style="?android:attr/progressBarStyleLarge"
+                android:layout_gravity="center_horizontal"
+                android:layout_width="wrap_content"
+                android:visibility="gone"
+                android:layout_height="wrap_content" />
+
+            <com.google.android.material.button.MaterialButton
+                android:textColor="@color/white"
+                android:id="@+id/searchBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                style="@style/Widget.MaterialComponents.Button"
+                android:text="@string/search"
+                android:layout_gravity="end"
+                />
+
+        </FrameLayout>
+
 
     </LinearLayout>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginStart="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginRight="10dp"
-        />
 
 
 
