--- a/app/src/main/res/layout/activity_set_wallpaper.xml
+++ b/app/src/main/res/layout/activity_set_wallpaper.xml
@@ -3,14 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     tools:context=".Activity.SetWallpaperActivity"
     >
-
-    <LinearLayout
-        android:background="@drawable/bg_cardview"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
 
     <LinearLayout
         android:id="@+id/layoutTop"
@@ -18,21 +13,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:orientation="vertical"
-        android:padding="5dp">
-        <!--
-        <TextView
-            android:id="@+id/tvTags"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:layout_marginLeft="5dp"
-            android:fontFamily="@font/baloo"
-            android:gravity="bottom"
-            android:text="Tags"
-            android:textColor="@color/black"
-            android:textSize="16sp" />
-        -->
+        android:padding="5dp"
 
+        >
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -60,28 +43,25 @@
         android:orientation="horizontal"
         android:padding="15dp">
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/getWallpaper"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="10dp"
-            android:background="@drawable/bg_btn"
-            android:padding="8dp"
             android:text="Download"
-            android:textColor="@color/white" />
+            android:textColor="@color/black" />
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/setwallpaper"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="10dp"
-            android:background="@drawable/bg_btn"
             android:padding="8dp"
             android:text="Apply"
-            android:textColor="@color/white" />
+            android:textColor="@color/black" />
     </LinearLayout>
 
 </RelativeLayout>
