--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -6,28 +6,34 @@
     android:layout_height="match_parent"
     tools:context=".Activity.SplashActivity"
     android:orientation="vertical"
+    android:background="#B6E1B9"
     >
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/imageView"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:layout_gravity="center"
-        android:layout_marginTop="200dp"
-        android:src="@drawable/ic_splash"
-        app:tint="#DC4040" />
+        android:layout_marginTop="100dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:src="@drawable/wallpaper"
+         />
 
     <TextView
+        android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Browse from a wide range of Wallpapers"
-        android:textSize="24dp"
-        android:fontFamily="@font/baloo"
         android:layout_marginTop="10dp"
+        android:fontFamily="@font/baloo"
+        android:gravity="center"
         android:padding="5dp"
-        android:textColor="#D57744"
-        android:textStyle="bold|italic"
-        android:gravity="center"/>
+        android:text="Get Wallpapers"
+        android:textColor="#EBF1EB"
+        android:textSize="24dp"
+        android:textStyle="bold|italic" />
 
+    <!--
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -35,9 +41,10 @@
         android:fontFamily="@font/baloo"
         android:gravity="bottom|center"
         android:padding="5dp"
-        android:text="All rights reserved"
-        android:textColor="#090909"
+        android:text="Wallpapers by Pixabay"
+        android:textColor="#46AC4B"
         android:textSize="14dp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+    -->
 
 </LinearLayout>
