--- a/app/src/main/res/layout/sample_item.xml
+++ b/app/src/main/res/layout/sample_item.xml
@@ -6,50 +6,28 @@
     android:layout_height="wrap_content"
     >
 
-    <LinearLayout
-        android:id="@+id/layoutVerti"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="5dp"
-        android:layout_marginTop="2dp"
-        >
-
         <androidx.cardview.widget.CardView
-            android:layout_width="155dp"
-            android:layout_height="140dp"
+            android:layout_width="160dp"
+            android:layout_height="wrap_content"
             android:elevation="2dp"
-            android:padding="10dp"
-            tools:targetApi="lollipop"
             app:cardCornerRadius="8dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            tools:targetApi="lollipop"
             android:layout_marginLeft="10dp"
-            android:layout_marginStart="10dp">
 
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="match_parent"
-            android:layout_height="140dp"
-            android:scaleType="fitXY"
-            tools:srcCompat="@tools:sample/avatars"
-            />
+            >
+
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="match_parent"
+                android:layout_height="240dp"
+                android:scaleType="fitXY"
+                tools:srcCompat="@tools:sample/avatars" />
 
         </androidx.cardview.widget.CardView>
-        <TextView
-            android:id="@+id/tags"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/baloo"
-            android:layout_marginLeft="10dp"
-            android:text="TEXt_TAGS"
-            android:inputType="textPersonName"
-            android:textColor="#6300AC"
-            android:textSize="10sp"
-            android:layout_gravity="bottom"
-            android:layout_marginTop="5dp"
-            android:layout_marginStart="10dp" />
 
-    </LinearLayout>
-
+    <!--
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -65,6 +43,6 @@
              />
 
     </LinearLayout>
-
+    -->
 
 </RelativeLayout>
